--- a/complete/CMakeLists.txt
+++ b/complete/CMakeLists.txt
@@ -1,12 +1,10 @@
 cmake_minimum_required(VERSION 3.10)
-project(main)
+project(x11game-project)
 
 find_package(X11)
 
-add_executable(main main.cpp)
+add_executable(x11game main.cpp)
 
-target_link_libraries(main
-	PRIVATE
+target_link_libraries(x11game
 	${X11_LIBRARIES}
 	)
-
